# fHEOM

./: .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  START_HERE.md  pyproject.toml  requirements.txt  setup.py
examples/: fheom_validation.py  fmo_energy_transfer_visualization.py  fmo_rank_comparison.py  quickstart_example.py
src/fheom/: __init__.py  fheom.py  fmo.py  heom_utils.py
