[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fHEOM"
version = "1.0.1"
description = "Low-rank factorization for efficient HEOM simulations of quantum coherence in biological systems"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Roberto Ignacio Henriquez-Perozo", email = "roberto@henriquezperozo.com"}
]
keywords = ["quantum biology", "HEOM", "FMO complex", "open quantum systems", "low-rank factorization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "qutip>=5.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0.0"]
dev = ["pytest>=7.3.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.urls]
Homepage = "https://github.com/rihp/fHEOM"
Repository = "https://github.com/rihp/fHEOM"

